@startuml

title __MYAPPLICATION's Class Diagram__\n

  package ch.web4b.myapplication {
    class Main2Activity {
        ~ tableLayout : TableLayout
        # onCreate()
    }
  }
  

  package ch.web4b.myapplication {
    class MainActivity {
        - textToSpeech : TextToSpeech
        - datePickerDialog : DatePickerDialog
        - onClickListener : OnClickListener
        ~ sharedPref : SharedPreferences
        # onCreate()
        + speak()
        + onInit()
    }
  }
  

  Main2Activity -up-|> AppCompatActivity
  Main2Activity o-- ActivityMain2Binding : binding
  Main2Activity o-- Main2Activity : main2Activity
  HostCallbacks -up-|> FragmentHostCallback
  MainActivity -up-|> OnInitListener
  MainActivity -up-|> AppCompatActivity
  MainActivity o-- MainActivity : mainActivity
  MainActivity o-- ActivityMainBinding : binding
  MainActivity o-- DataHolder : holder
  HostCallbacks -up-|> FragmentHostCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
